<resources>
    <string name="app_name">MovieApp</string>

    <string name="popular_movie">Popular Movie</string>
    <string name="top_rated_Movie">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="title_movie">Movie Title</string>
    <string name="original_title">Original Title</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    </string>

    <string name="description">Description</string>
    <string name="review">Reviews</string>
    <string name="author_review">Author : %s</string>
    <string name="content_review">Content</string>
</resources>